--- a/mysite/mywebsite/myinfo/templates/myinfo/base.html
+++ b/mysite/mywebsite/myinfo/templates/myinfo/base.html
@@ -29,7 +29,9 @@
   <a class='navbar-brand bigbrand' href="{% url 'user' %}"  ><i class="fa fa-th">YOUR VIEWS</a>
     <a class='navbar-brand bigbrand' href="{% url 'list' %}" ><i class="fa fa-usd">POSTS</a>
       <a class='navbar-brand bigbrand' href="https://www.youtube.com/" >YOUTUBE</a>
-      <a class='navbar-brand bigbrand' href="http://www.espncricinfo.com/" ><U>CRICKET SCORES</U>111</a>
+      <a class='navbar-brand bigbrand' href="http://www.espncricinfo.com/" ><U>CRICKET SCORES</U></a>
+      <a class='navbar-brand bigbrand' href="http://www.espncricinfo.com/" ><U>CRICKET SCORESs</U>111</a>
+
 
 
 
